--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: generic
 sudo: required
 services:
     - docker
@@ -6,5 +7,5 @@ before_install:
     - docker build -t knidhan/docker-react -f dockerfile.dev .
 
 script:
-    - docker run knidhan/docker-react npm run test  -- --coverage
+    - docker run -e  CI=true knidhan/docker-react npm run test  -- --coverage
 
