--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ deploy:
     - env: "DockerReact-env"
     - bucket_name: "elasticbeanstalk-us-east-1-615859161062"
     - bucket_path: "DockerReact"
-    
+    on:
+        branch: master
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
 
