--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-language: generic
 sudo: required
+language: generic
 services:
     - docker
 
@@ -7,15 +7,15 @@ before_install:
     - docker build -t knidhan/docker-react -f dockerfile.dev .
 
 script:
-    - docker run knidhan/docker-react npm run test  -- --coverage
+    - docker run -e CI=true knidhan/docker-react npm run test  -- --coverage
 
 deploy:
-    - provider: elasticbeanstalk
-    - region: "us-east-1"
-    - app: "DockerReact"
-    - env: "DockerReact-env"
-    - bucket_name: "elasticbeanstalk-us-east-1-615859161062"
-    - bucket_path: "DockerReact"
+    provider: elasticbeanstalk
+    region: "us-east-1"
+    app: "DockerReact"
+    env: "DockerReact-env"
+    bucket_name: "elasticbeanstalk-us-east-1-615859161062"
+    bucket_path: "DockerReact"
     on:
         branch: master
     access_key_id: $AWS_ACCESS_KEY
