--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ script:
 deploy:
     provider: elasticbeanstalk
     region: "us-east-1"
-    app: "DockerReact"
+    app: "docker-react"
     env: "DockerReact-env"
     bucket_name: "elasticbeanstalk-us-east-1-615859161062"
-    bucket_path: "DockerReact"
+    bucket_path: "docker-react"
     on:
         branch: master
     access_key_id: $AWS_ACCESS_KEY
